fix: input history button alignment

--- a/frontend/src/styles/test.scss
+++ b/frontend/src/styles/test.scss
@@ -566,7 +566,10 @@
     // grid-column: 1/3;
     margin-bottom: 1rem;
     .textButton {
-      padding: 0;
+      padding: 0 0.25em;
+    }
+    #copyWordsListButton {
+      margin-left: 0.5em;
     }
     .heatmapLegend {
       margin-left: 0.5rem;
@@ -599,9 +602,10 @@
       }
     }
     .title {
-      -webkit-user-select: none;
       user-select: none;
       margin-bottom: 0.25rem;
+      display: flex;
+      align-items: center;
     }
     .words {
       display: flex;
